--- a/Android/VideoRecorder/res/layout/activity_main.xml
+++ b/Android/VideoRecorder/res/layout/activity_main.xml
@@ -1,13 +1,16 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-	android:orientation="vertical" 
+    android:orientation="vertical"
 	android:layout_width="fill_parent" 
     android:layout_height="fill_parent"
-    tools:context=".CamRecorder" >
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context=".MainActivity" >
 
-
-    <com.example.videorecorder.CamcorderView
-        android:id="@+id/camcorderView1"
+    <com.mobvacc.videorecorder.vcorderView
+        android:id="@+id/vcorderView1"
       	android:layout_width="fill_parent" 
       	android:layout_height="fill_parent" 
         android:enabled="false" 
